--- a/src/Animator.mxml
+++ b/src/Animator.mxml
@@ -12,21 +12,31 @@
 		<s:BorderContainer id="borderLayer" width="65%" height="100%" alpha="1.0" borderStyle="solid"
 						   cornerRadius="10">
 		</s:BorderContainer>
-		<s:BorderContainer width="35%" height="100%" cornerRadius="10">
-			<s:VGroup id="inspector" x="0" y="0" width="100%" height="100%" paddingBottom="10"
-					  paddingLeft="10" paddingRight="10" paddingTop="10">
-			</s:VGroup>
-		</s:BorderContainer>
+		
+		<s:VGroup id="rightColumn"  width="35%" height="100%">
+			<s:BorderContainer width="100%" height="80%" cornerRadius="10">
+				<s:VGroup id="inspector" x="0" y="0" width="100%" height="100%" paddingBottom="10"
+						  paddingLeft="10" paddingRight="10" paddingTop="10">
+				</s:VGroup>
+			</s:BorderContainer>
+			<s:BorderContainer width="100%" height="20%" cornerRadius="10">
+				<s:HGroup x="0" y="0" width="100%" height="100%" paddingBottom="10"
+						  paddingLeft="10" paddingRight="10" paddingTop="10">
+					<s:Button id="open" label="open" width = "80" height = "40" click="onOpen()">
+					</s:Button>
+					<s:Button id="save" label="save" width = "80" height = "40" click="onSave()">
+					</s:Button>
+				</s:HGroup>
+			</s:BorderContainer>
+		</s:VGroup>
 	</s:HGroup>
 	
 	<fx:Script>
 		<![CDATA[
+			import com.wonder.DataParser;
+			import com.wonder.EditController;
+			
 			import mx.core.UIComponent;
-			
-			import spark.components.Button;
-			
-			import ui.AnimState;
-			import ui.EditController;
 			
 			private var m_editLayer:UIComponent;
 			private var m_inspector:VGroup;
@@ -50,10 +60,14 @@
 				m_editLayer.height = m_borderContainer.height;
 			}
 			
-			private function click():void
+			private function onSave():void
 			{
-				var rect:AnimState = new AnimState("click");
-				m_editLayer.addChild(rect);
+				EditController.getInstance().save();
+			}
+			
+			private function onOpen():void
+			{
+				DataParser.parseSkeletonJson();
 			}
 		]]>
 	</fx:Script>
