--- a/src/Animator.mxml
+++ b/src/Animator.mxml
@@ -22,9 +22,11 @@
 			<s:BorderContainer width="100%" height="20%" cornerRadius="10">
 				<s:HGroup x="0" y="0" width="100%" height="100%" paddingBottom="10"
 						  paddingLeft="10" paddingRight="10" paddingTop="10">
-					<s:Button id="open" label="open" width = "80" height = "40" click="onOpen()">
+					<s:Button id="importBtn" label="import" width = "80" height = "40" click="onImport()">
 					</s:Button>
-					<s:Button id="save" label="save" width = "80" height = "40" click="onSave()">
+					<s:Button id="saveBtn" label="save" width = "80" height = "40" click="onSave()">
+					</s:Button>
+					<s:Button id="openBtn" label="open" width = "80" height = "40" click="onOpen()">
 					</s:Button>
 				</s:HGroup>
 			</s:BorderContainer>
@@ -65,9 +67,14 @@
 				EditController.getInstance().save();
 			}
 			
-			private function onOpen():void
+			private function onImport():void
 			{
 				DataParser.parseSkeletonJson();
+			}
+			
+			private function onOpen():void
+			{
+				DataParser.parseFSMJson();
 			}
 		]]>
 	</fx:Script>
